# OpenHarmony_2024

./: README.md
DAYU200/serverless/: README.md  build-profile.json5  oh-package.json5
DAYU200/serverless/AppScope/: app.json5
DAYU200/serverless/AppScope/resources/base/element/: string.json
DAYU200/serverless/entry/: build-profile.json5
DAYU200/serverless/entry/src/main/: module.json5
DAYU200/serverless/entry/src/main/cpp/: CMakeLists.txt  hello.cpp
DAYU200/serverless/entry/src/main/cpp/common/: common.cpp
DAYU200/serverless/entry/src/main/cpp/include/: common.h
DAYU200/serverless/entry/src/main/cpp/types/libentry/: index.d.ts
DAYU200/serverless/entry/src/main/ets/pages/: Index.ets  second.ets
DAYU200/serverless/entry/src/main/ets/util/: Logger.ets
DAYU200/serverless/entry/src/main/resources/zh_CN/element/: string.json
atlas200dk/bert/: Dockerfile  README.md
atlas200dk/bert/src/: bert_text_classification.py
atlas200dk/deeplabv3/: Dockerfile  README.md
atlas200dk/deeplabv3/acl/dvpp/: hi_mpi_sys.h
atlas200dk/deeplabv3/acl/media/: hi_common_isp.h
atlas200dk/deeplabv3/src/: deeplabv3.py
atlas200dk/mobilenetv3/: Dockerfile  README.md
atlas200dk/mobilenetv3/src/: mobilenet_classify.py
atlas200dk/resnet50/: Dockerfile  README.md
atlas200dk/resnet50/acl/dvpp/: hi_dvpp_vpc.h
atlas200dk/resnet50/acl/media/: hi_mpi_hdmi.h
atlas200dk/resnet50/src/: sampleResnetQuickStart.py
atlas200dk/transcoding/: Dockerfile  README.md
atlas200dk/transcoding/acl/dvpp/: hi_dvpp_venc.h
atlas200dk/transcoding/data/: output.h265
atlas200dk/transcoding/src/: acl_venc.py
atlas200dk/yolov5-infer-cpp/: CMakeLists.txt  Dockerfile  README.md  repo.txt
atlas200dk/yolov5-infer-cpp/acl/dvpp/: hi_media_common.h
atlas200dk/yolov5-infer-cpp/acl/media/: hi_common_vi.h  hi_common_vpss.h
atlas200dk/yolov5-infer-cpp/src/: CMakeLists.txt  main.cpp  model.cpp  model.h  yolov5.cpp  yolov5.h
rk3588/resnet_rk3588_v1/: CMakeLists.txt  Dockerfile  README.md
rk3588/resnet_rk3588_v1/src/: CMakeLists.txt  main.cpp  model.cpp  model.h  resnet.cpp  resnet.h
rk3588/video_decoder_docker_multiway_v3/: Dockerfile  README.md
rk3588/video_decoder_docker_multiway_v3/src/: CMakeLists.txt  infer.cpp  infer.h  main.cpp  video_decoder.cpp  video_decoder.h
rk3588/video_transcoder_docker_multiway_v1/: Dockerfile  README.md
rk3588/video_transcoder_docker_multiway_v1/src/: CMakeLists.txt  main.cpp  video_transcoder.cpp  video_transcoder.h
